@@ -15,6 +15,7 @@ wxBase:
 All (GUI):
 
 - support for virtual list control added
+- column images in report mode of the list control
 - wxFindReplaceDialog added (based on work of Markus Greither)
 - wxTextCtrl::SetMaxLength() added (wxMSW/wxGTK)
 - polygon support in wxRegion (Klaas Holwerda)
